--- a/index.html
+++ b/index.html
@@ -11,46 +11,53 @@
       href="./assets/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@800&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" type="text/css" href="styles.css" />
-  
 
     <title>Frontend Mentor | Skilled E-Learning</title>
   </head>
   <body>
     <header>
       <h2>skilled</h2>
-      <a href="">Get Started</a>
+      <a href="" class="btn-1">Get Started</a>
     </header>
 
     <main>
       <!--Intro-->
-      <section>
+      <section id="intro">
         <h1>Maximize skill, minimize budget</h1>
         <p>
-          Our modern courses across a range of in-demand skills will give you the
-          knowledge you need to live the life you want.
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
         </p>
-        <a href="">Get Started</a>
-  
+        <a href="" class="btn-2">Get Started</a>
+
         <!--Stats Image-->
-        <div></div>
+        <div id="stats-image"></div>
       </section>
-      
 
       <!--Courses-->
       <section>
-        <div><h2>Check out our most popular courses!</h2></div>
+        <div id="course-head"><h2>Check out our most popular courses!</h2></div>
 
-        <div>
+        <div class="course-tile">
+          <img src="/assets/icon-animation.svg"/>
           <h2>Animation</h2>
           <p>
-            Learn the latest animation techniques to create stunning motion design
-            and captivate your audience.
+            Learn the latest animation techniques to create stunning motion
+            design and captivate your audience.
           </p>
           <a href="">Get Started</a>
         </div>
-  
-        <div>
+
+        <div class="course-tile">
+          <img src="/assets/icon-design.svg"/>
           <h2>Design</h2>
           <p>
             Create beautiful, usable interfaces to help shape the future of how
@@ -58,17 +65,19 @@
           </p>
           <a href="">Get Started</a>
         </div>
-  
-        <div>
+
+        <div class="course-tile">
+          <img src="/assets/icon-photography.svg"/>
           <h2>Photography</h2>
           <p>
-            Explore critical fundamentals like lighting, composition, and focus to
-            capture exceptional photos.
+            Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.
           </p>
           <a href="">Get Started</a>
         </div>
-  
-        <div>
+
+        <div class="course-tile">
+          <img src="/assets/icon-crypto.svg"/>
           <h2>Crypto</h2>
           <p>
             All you need to know to get started investing in crypto. Go from
@@ -76,8 +85,9 @@
           </p>
           <a href="">Get Started</a>
         </div>
-  
-        <div>
+
+        <div class="course-tile">
+          <img src="/assets/icon-business.svg"/>
           <h2>Business</h2>
           <p>
             A step-by-step playbook to help you start, scale, and sustain your
@@ -86,12 +96,11 @@
           <a href="">Get Started</a>
         </div>
       </section>
-      
     </main>
 
     <footer>
       <h5>skilled</h5>
-      <a href="">Get Started</a>
+      <a href="" class="btn-3">Get Started</a>
     </footer>
   </body>
 </html>
