--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
       rel="stylesheet"
     />
 
@@ -23,33 +23,37 @@
     <title>Frontend Mentor | Skilled E-Learning</title>
   </head>
   <body>
+    
     <header>
-      <h2>skilled</h2>
-      <a href="" class="btn-1">Get Started</a>
+      <img src="/assets/logo-dark.svg" />
+      <a href="" class="btn-1" >Get Started</a>
     </header>
-
+    
     <main>
       <!--Intro-->
       <section id="intro">
-        <h1>Maximize skill, minimize budget</h1>
-        <p>
-          Our modern courses across a range of in-demand skills will give you
-          the knowledge you need to live the life you want.
-        </p>
-        <a href="" class="btn-2">Get Started</a>
+          <div id="intro-msg">
+            <h2 class="heading-XL">Maximize skill, minimize budget</h2>
+            <p class="body-M">
+              Our modern courses across a range of in-demand skills will give you
+              the knowledge you need to live the life you want.
+            </p>
+            <a href="" class="btn-2" >Get Started</a>
+          </div>
 
-        <!--Stats Image-->
-        <div id="stats-image"></div>
+          <img id="stats-image"/>
       </section>
 
       <!--Courses-->
-      <section>
-        <div id="course-head"><h2>Check out our most popular courses!</h2></div>
+      <section id="courses">
+        <div id="course-head">
+          <h2 class="heading-M">Check out our most popular courses!</h2>
+        </div>
 
         <div class="course-tile">
-          <img src="/assets/icon-animation.svg"/>
-          <h2>Animation</h2>
-          <p>
+          <img src="/assets/icon-animation.svg" />
+          <h2 class="heading-S">Animation</h2>
+          <p class="body-M">
             Learn the latest animation techniques to create stunning motion
             design and captivate your audience.
           </p>
@@ -57,9 +61,9 @@
         </div>
 
         <div class="course-tile">
-          <img src="/assets/icon-design.svg"/>
-          <h2>Design</h2>
-          <p>
+          <img src="/assets/icon-design.svg" />
+          <h2 class="heading-S">Design</h2>
+          <p class="body-M">
             Create beautiful, usable interfaces to help shape the future of how
             the web looks.
           </p>
@@ -67,9 +71,9 @@
         </div>
 
         <div class="course-tile">
-          <img src="/assets/icon-photography.svg"/>
-          <h2>Photography</h2>
-          <p>
+          <img src="/assets/icon-photography.svg" />
+          <h2 class="heading-S">Photography</h2>
+          <p class="body-M">
             Explore critical fundamentals like lighting, composition, and focus
             to capture exceptional photos.
           </p>
@@ -77,9 +81,9 @@
         </div>
 
         <div class="course-tile">
-          <img src="/assets/icon-crypto.svg"/>
-          <h2>Crypto</h2>
-          <p>
+          <img src="/assets/icon-crypto.svg" />
+          <h2 class="heading-S">Crypto</h2>
+          <p class="body-M">
             All you need to know to get started investing in crypto. Go from
             beginner to advanced with this 54 hour course.
           </p>
@@ -87,9 +91,9 @@
         </div>
 
         <div class="course-tile">
-          <img src="/assets/icon-business.svg"/>
-          <h2>Business</h2>
-          <p>
+          <img src="/assets/icon-business.svg" />
+          <h2 class="heading-S">Business</h2>
+          <p class="body-M">
             A step-by-step playbook to help you start, scale, and sustain your
             business without outside investment.
           </p>
@@ -99,8 +103,8 @@
     </main>
 
     <footer>
-      <h5>skilled</h5>
-      <a href="" class="btn-3">Get Started</a>
+      <img src="/assets/logo-light.svg" />
+      <span><a href="" class="btn-3">Get Started</a></span>
     </footer>
   </body>
 </html>
